--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Luis Ferdinand adalah mahasiswa Mercu Buana Jakarta</h1>
+<h3>Hi, there! This page is still under construction. Stay tuned.</h3>
