--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
             color: #fff;
             text-align: center;
             padding: 1rem 0;
-            position: fixed;
+            position: static;
             width: 100%;
-            bottom: 0;
         }
         .project {
             margin-bottom: 1.5rem;
@@ -57,6 +56,9 @@
         .project a:hover {
             text-decoration: underline;
         }
+        .publication {
+            margin-bottom: 1rem;
+        }
     </style>
 </head>
 <body>
@@ -66,6 +68,7 @@
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#publications">Publications</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -87,6 +90,18 @@
             <h3>Project 2: Data Analysis Pipeline</h3>
             <p>Description: A pipeline for analyzing and visualizing experimental data.</p>
             <a href="https://github.com/yourusername/project2" target="_blank">View on GitHub</a>
+        </div>
+    </section>
+
+    <section id="publications">
+        <h2>Publications</h2>
+        <div class="publication">
+            <h3>Publication 1: "Title of Research Paper"</h3>
+            <p>Journal Name, Year, DOI: <a href="https://doi.org/example1" target="_blank">https://doi.org/example1</a></p>
+        </div>
+        <div class="publication">
+            <h3>Publication 2: "Title of Another Research Paper"</h3>
+            <p>Journal Name, Year, DOI: <a href="https://doi.org/example2" target="_blank">https://doi.org/example2</a></p>
         </div>
     </section>
 
