--- a/index.html
+++ b/index.html
@@ -11,29 +11,37 @@
             padding: 0;
             background-color: #f4f4f9;
             color: #333;
+            display: flex;
+            flex-direction: row;
+            min-height: 100vh;
         }
-        header {
+        .sidebar {
             background: #333;
             color: #fff;
-            padding: 1rem 0;
-            text-align: center;
-        }
-        nav ul {
-            list-style: none;
-            padding: 0;
-        }
-        nav ul li {
-            display: inline;
-            margin: 0 10px;
-        }
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-        section {
+            width: 25%;
             padding: 2rem;
-            max-width: 800px;
-            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .sidebar img {
+            border-radius: 50%;
+            max-width: 150px;
+            height: auto;
+            margin-bottom: 1rem;
+        }
+        .sidebar a {
+            color: #007acc;
+            text-decoration: none;
+            margin: 0.5rem 0;
+        }
+        .sidebar a:hover {
+            text-decoration: underline;
+        }
+        .content {
+            width: 75%;
+            padding: 2rem;
+            overflow-y: auto;
         }
         h2 {
             color: #444;
@@ -43,8 +51,6 @@
             color: #fff;
             text-align: center;
             padding: 1rem 0;
-            position: static;
-            width: 100%;
         }
         .project {
             margin-bottom: 1.5rem;
@@ -62,56 +68,53 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>My Portfolio</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#publications">Publications</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="sidebar">
+        <img src="profile-photo.jpg" alt="Profile Photo">
+        <h2>My Portfolio</h2>
+        <p>Hi, I'm a theoretical/computational physicist transitioning into experimental physics.</p>
+        <a href="https://orcid.org/your-orcid-id" target="_blank">ORCID</a>
+        <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+        <a href="https://linkedin.com/in/yourlinkedin" target="_blank">LinkedIn</a>
+        <a href="mailto:yourname@example.com">Email Me</a>
+    </div>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hi, I'm a theoretical/computational physicist transitioning into experimental physics. I love solving complex problems and am passionate about exploring new challenges in research and development.</p>
-    </section>
+    <div class="content">
+        <section id="projects">
+            <h2>Projects</h2>
+            <div class="project">
+                <h3>Project 1: Computational Simulation</h3>
+                <p>Description: A simulation tool for modeling complex physical systems.</p>
+                <img src="project1-screenshot.jpg" alt="Screenshot of Project 1">
+                <a href="https://github.com/yourusername/project1" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project">
+                <h3>Project 2: Data Analysis Pipeline</h3>
+                <p>Description: A pipeline for analyzing and visualizing experimental data.</p>
+                <img src="project2-screenshot.jpg" alt="Screenshot of Project 2">
+                <a href="https://github.com/yourusername/project2" target="_blank">View on GitHub</a>
+            </div>
+        </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Project 1: Computational Simulation</h3>
-            <p>Description: A simulation tool for modeling complex physical systems.</p>
-            <a href="https://github.com/yourusername/project1" target="_blank">View on GitHub</a>
-        </div>
-        <div class="project">
-            <h3>Project 2: Data Analysis Pipeline</h3>
-            <p>Description: A pipeline for analyzing and visualizing experimental data.</p>
-            <a href="https://github.com/yourusername/project2" target="_blank">View on GitHub</a>
-        </div>
-    </section>
+        <section id="publications">
+            <h2>Publications</h2>
+            <div class="publication">
+                <h3>Publication 1: "Title of Research Paper"</h3>
+                <p>Journal Name, Year, DOI: <a href="https://doi.org/example1" target="_blank">https://doi.org/example1</a></p>
+            </div>
+            <div class="publication">
+                <h3>Publication 2: "Title of Another Research Paper"</h3>
+                <p>Journal Name, Year, DOI: <a href="https://doi.org/example2" target="_blank">https://doi.org/example2</a></p>
+            </div>
+        </section>
 
-    <section id="publications">
-        <h2>Publications</h2>
-        <div class="publication">
-            <h3>Publication 1: "Title of Research Paper"</h3>
-            <p>Journal Name, Year, DOI: <a href="https://doi.org/example1" target="_blank">https://doi.org/example1</a></p>
-        </div>
-        <div class="publication">
-            <h3>Publication 2: "Title of Another Research Paper"</h3>
-            <p>Journal Name, Year, DOI: <a href="https://doi.org/example2" target="_blank">https://doi.org/example2</a></p>
-        </div>
-    </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>You can reach me at <a href="mailto:yourname@example.com">yourname@example.com</a>.</p>
+        </section>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>You can reach me at <a href="mailto:yourname@example.com">yourname@example.com</a>.</p>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 My Portfolio</p>
-    </footer>
+        <footer>
+            <p>&copy; 2024 My Portfolio</p>
+        </footer>
+    </div>
 </body>
 </html>
