--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             background: #333;
             color: #fff;
             text-align: center;
-            padding: 1rem 0;
+            padding: 0.5rem 0;
+            font-size: 0.8rem;
         }
         .project {
             margin-bottom: 1.5rem;
