--- a/index.html
+++ b/index.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Hendry (Minfui Lim)</title>
     <style>
+        :root {
+            --background-light: #f4f4f9;
+            --text-light: #333;
+            --background-dark: #1e1e1e;
+            --text-dark: #ddd;
+            --link-light: #007acc;
+            --link-dark: #6ca0dc;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
+            background-color: var(--background-light);
+            color: var(--text-light);
             display: flex;
             flex-direction: row;
             min-height: 100vh;
+            transition: background-color 0.3s, color 0.3s;
         }
         .sidebar {
             background: #333;
@@ -31,7 +41,7 @@
             margin-bottom: 1rem;
         }
         .sidebar a {
-            color: #007acc;
+            color: var(--link-light);
             text-decoration: none;
             margin: 0.5rem 0;
         }
@@ -57,7 +67,7 @@
             margin-bottom: 1.5rem;
         }
         .project a {
-            color: #007acc;
+            color: var(--link-light);
             text-decoration: none;
         }
         .project a:hover {
@@ -66,9 +76,30 @@
         .publication {
             margin-bottom: 1rem;
         }
+        .dark-mode {
+            --background-light: #1e1e1e;
+            --text-light: #ddd;
+            --link-light: #6ca0dc;
+        }
+        #theme-toggle {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            background: #007acc;
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+        #theme-toggle:hover {
+            background: #005f99;
+        }
     </style>
 </head>
 <body>
+    <button id="theme-toggle">Toggle Dark Mode</button>
     <div class="sidebar">
         <img src="profile-photo.jpg" alt="Profile Photo">
         <h2>My Portfolio</h2>
@@ -117,5 +148,12 @@
             <p>&copy; 2024 My Portfolio</p>
         </footer>
     </div>
+
+    <script>
+        const toggleButton = document.getElementById('theme-toggle');
+        toggleButton.addEventListener('click', () => {
+            document.body.classList.toggle('dark-mode');
+        });
+    </script>
 </body>
 </html>
