--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hendry (Minfui Lim)</title>
+    <title>My Portfolio</title>
     <style>
         :root {
             --background-light: #f4f4f9;
@@ -44,9 +44,16 @@
             color: var(--link-light);
             text-decoration: none;
             margin: 0.5rem 0;
+            display: flex;
+            align-items: center;
         }
         .sidebar a:hover {
             text-decoration: underline;
+        }
+        .sidebar a img {
+            width: 20px;
+            height: 20px;
+            margin-right: 8px;
         }
         .content {
             width: 75%;
@@ -85,29 +92,41 @@
             position: fixed;
             top: 10px;
             right: 10px;
-            background: #007acc;
-            color: #fff;
+            background: none;
             border: none;
-            padding: 0.5rem 1rem;
             cursor: pointer;
-            border-radius: 5px;
-            transition: background 0.3s;
+            padding: 0;
         }
-        #theme-toggle:hover {
-            background: #005f99;
+        #theme-toggle img {
+            width: 30px;
+            height: 30px;
+            transition: transform 0.3s;
+        }
+        #theme-toggle img:hover {
+            transform: scale(1.1);
         }
     </style>
 </head>
 <body>
-    <button id="theme-toggle">Toggle Dark Mode</button>
+    <button id="theme-toggle">
+        <img src="light-mode-icon.png" alt="Toggle Dark Mode">
+    </button>
     <div class="sidebar">
         <img src="profile-photo.jpg" alt="Profile Photo">
         <h2>My Portfolio</h2>
         <p>Hi, I'm a theoretical/computational physicist transitioning into experimental physics.</p>
-        <a href="https://orcid.org/your-orcid-id" target="_blank">ORCID</a>
-        <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-        <a href="https://linkedin.com/in/yourlinkedin" target="_blank">LinkedIn</a>
-        <a href="mailto:yourname@example.com">Email Me</a>
+        <a href="https://orcid.org/your-orcid-id" target="_blank">
+            <img src="orcid-icon.png" alt="ORCID">ORCID
+        </a>
+        <a href="https://github.com/yourusername" target="_blank">
+            <img src="github-icon.png" alt="GitHub">GitHub
+        </a>
+        <a href="https://linkedin.com/in/yourlinkedin" target="_blank">
+            <img src="linkedin-icon.png" alt="LinkedIn">LinkedIn
+        </a>
+        <a href="mailto:yourname@example.com">
+            <img src="email-icon.png" alt="Email">Email Me
+        </a>
     </div>
 
     <div class="content">
@@ -151,8 +170,13 @@
 
     <script>
         const toggleButton = document.getElementById('theme-toggle');
+        const toggleImage = toggleButton.querySelector('img');
+
         toggleButton.addEventListener('click', () => {
             document.body.classList.toggle('dark-mode');
+            const isDarkMode = document.body.classList.contains('dark-mode');
+            toggleImage.src = isDarkMode ? 'dark-mode-icon.png' : 'light-mode-icon.png';
+            toggleImage.alt = isDarkMode ? 'Toggle Light Mode' : 'Toggle Dark Mode';
         });
     </script>
 </body>
