--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         .sidebar img {
             border-radius: 50%;
             max-width: 150px;
-            height: auto;
+            height: 150px;
+            object-fit: cover;
             margin-bottom: 1rem;
         }
         .sidebar a {
