--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hendry's Portofolio</title>
+    <title>Hendry (Minfui Lim)</title>
     <style>
         :root {
             --background-dark: #1e1e1e;
