--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="sidebar">
         <img src="assets/profile-photo.jpg" alt="Profile Photo">
         <h3>Hendry (Minfui Lim)</h3>
-        <p>A quantum physics versatilist.</p>
+        <p>An aspiring quantum physics versatilist.</p>
 
         <!-- <div class="toc">
             <h3>Navigation</h3>
