--- a/index.html
+++ b/index.html
@@ -199,6 +199,10 @@
                 <h3>Efficient Classical Computation of Single-Qubit Marginal Measurement Probabilities to Simulate Certain Classes of Quantum Algorithms</h3>
                 <p><a href="https://doi.org/10.48550/arXiv.2411.06822" target="_blank">arXiv:2411.06822</a></p>
             </div>
+            <div class="rhs_listing">
+                <h3>pyBoLaNO: A Python symbolic package for normal ordering involving bosonic ladder operators</h3>
+                <p><a href="https://doi.org/10.48550/arXiv.2501.01603" target="_blank">arXiv:2501.01603</a></p>
+            </div>
         </section>
 
         <section id="projects">
