Add pyBoLaNO to projects

--- a/index.html
+++ b/index.html
@@ -208,9 +208,14 @@
         <section id="projects">
             <h2>Projects</h2>
             <div class="rhs_listing">
+                <h3>pyBoLaNO</h3>
+                <p>Symbolically evaluate normal ordering involving bosonic ladder operators with SymPy.</p>
+                <a href="https://github.com/hendry24/pyBoLaNO" target="_blank">(GitHub Repository)</a>
+            </div>
+            <div class="rhs_listing">
                 <h3>moyalstar</h3>
                 <p>Symbolically evaluate Moyal &star;-products with SymPy.</p>
-                <a href="https://github.com/hendry24/moyalstar" target="_blank">(Install on GitHub)</a>
+                <a href="https://github.com/hendry24/moyalstar" target="_blank">(GitHub Repository)</a>
             </div>
             <div class="rhs_listing">
                 <h3>qbou</h3> 
