--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
                 </p>
                 <p>
                 I enjoy working
-                on a wide range of problems in quantum physics&mdash;being a generalist.
+                on a wide range of problems in quantum physics.
                 It is hard to choose between theoretical, computational, and experimental
                 work&mdash;everything is equally interesting. However, I do have a 
-                preference for realistic results and would love to delve deeper into the
-                experimental sides of quantum physics. 
+                preference for realistic results and would love to delve deeper into applied aspects
+                of quantum systems. 
                 </p>
                 <p>
                 Wouldn't it be cool if another
@@ -180,7 +180,7 @@
                 <p>A short visit to the Hybrid Quantum Device Lab where I learned to use 
                     COMSOL Multiphysics<sup>&reg;</sup> to model a superconducting microwave
                     cavity coupled to a vacuum gap capacitor and was guided to observe experimental
-                    appratuses for quantum physics.
+                    apparatuses for quantum physics.
                 </p>
             </div>
         </section>
@@ -201,6 +201,7 @@
             </div>
             <div class="rhs_listing">
                 <h3>pyBoLaNO: A Python symbolic package for normal ordering involving bosonic ladder operators</h3>
+                <p><a href="https://doi.org/10.1016/j.cpc.2025.109622" target="_blank">Comput. Phys. Commun. 313. 109622</a></p>
                 <p><a href="https://doi.org/10.48550/arXiv.2501.01603" target="_blank">arXiv:2501.01603</a></p>
             </div>
         </section>
@@ -216,11 +217,6 @@
                 <h3>moyalstar</h3>
                 <p>Symbolically evaluate Moyal &star;-products with SymPy.</p>
                 <a href="https://github.com/hendry24/moyalstar" target="_blank">(GitHub Repository)</a>
-            </div>
-            <div class="rhs_listing">
-                <h3>qbou</h3> 
-                <p>Qubit under Ornstein-Uhlenbeck noises, its dynamical decoupling, and optimal control.</p>
-                <p><em>(stay tuned)</em></p>
             </div>
         </section>
 
