--- a/index.html
+++ b/index.html
@@ -201,8 +201,10 @@
             </div>
             <div class="rhs_listing">
                 <h3>pyBoLaNO: A Python symbolic package for normal ordering involving bosonic ladder operators</h3>
-                <p><a href="https://doi.org/10.1016/j.cpc.2025.109622" target="_blank">Comput. Phys. Commun. 313. 109622</a></p>
-                <p><a href="https://doi.org/10.48550/arXiv.2501.01603" target="_blank">arXiv:2501.01603</a></p>
+                <p>
+                    <a href="https://doi.org/10.1016/j.cpc.2025.109622" target="_blank">Comput. Phys. Commun. 313. 109622 (2025)</a>
+                    / <a href="https://doi.org/10.48550/arXiv.2501.01603" target="_blank">arXiv:2501.01603</a>
+                </p>
             </div>
         </section>
 
